# TermVis

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_wheels.yml
examples/: basic_demo.py  interactive_painter.py  remote_control_demo.py  remote_desktop.py
src/: lib.rs
src/modules/: codec.rs  mod.rs  recorder.rs  renderer.rs  source.rs
termvis/: __init__.py
