[package]
name = "term_video"
version = "0.1.1"
edition = "2024"

[lib]
name = "term_video_py"
crate-type = ["cdylib"]

[dependencies]
crossterm = "0.29.0"
flate2 = "1.0"

[dependencies.pyo3]
version = "0.21"
features = ["extension-module", "abi3-py38", "generate-import-lib"]

[dependencies.opencv]
version = "0.98.2"
default-features = false
features = ["videoio", "imgproc"]
