[package]
name = "term_video"
version = "0.1.6"
authors = ["Hou Un, Wong <harumoto1103@gmail.com>"]
edition = "2024"

[lib]
name = "_termvis"
crate-type = ["cdylib"]

[dependencies]
crossterm = "0.29.0"
flate2 = "1.0"

[dependencies.pyo3]
version = "0.21"
features = ["extension-module", "abi3-py38", "generate-import-lib"]

[dependencies.opencv]
version = "0.98.2"
default-features = false
features = ["videoio", "imgproc"]
