[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "termvis"
version = "0.1.1"
description = "High-performance terminal video visualization and recording library."
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "numpy"
]

[tool.maturin]
module-name = "term_video_py"
python-source = "."
include = ["termvis/**/*"]
