[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "termvis"
version = "0.1.5"
description = "High-performance terminal video visualization and recording library."
authors = [{name = "Hou Un, Wong", email = "harumoto1103@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "numpy"
]

[project.urls]
Homepage = "https://github.com/Harumoto1103/TermVis"
Repository = "https://github.com/Harumoto1103/TermVis.git"

[tool.maturin]
module-name = "termvis._termvis"
python-source = "."
